--- a/tsconfig.dist.json
+++ b/tsconfig.dist.json
@@ -4,5 +4,6 @@
     "compilerOptions": {
         "outDir": "dist",
         "declaration": true
-    }
+    },
+    "exclude": ["src/**/*.test.ts"]
 }
