--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "build": "tsc --build tsconfig.dist.json",
+    "lint": "eslint .",
     "start": "node ./dist/index.js",
     "start:dev": "concurrently \"npm run build -- --watch\" \"nodemon -w dist -w .env -x node --env-file=.env ./dist/index.js\"",
     "test": "jest"
@@ -13,11 +14,16 @@
   "license": "UNLICENSED",
   "private": true,
   "devDependencies": {
+    "@eslint/js": "^8.51.0",
     "@jest/globals": "^29.7.0",
     "@tsconfig/node20": "^20.1.2",
     "@tsconfig/strictest": "^2.0.2",
     "@types/node": "^20.8.5",
+    "@typescript-eslint/eslint-plugin": "^6.7.5",
+    "@typescript-eslint/parser": "^6.7.5",
     "concurrently": "^8.2.1",
+    "eslint": "^8.51.0",
+    "globals": "^13.23.0",
     "jest": "^29.7.0",
     "nodemon": "^3.0.1",
     "ts-jest": "^29.1.1",
