--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@jest/globals": "^29.7.0",
     "@tsconfig/node20": "^20.1.2",
     "@tsconfig/strictest": "^2.0.2",
+    "@types/express": "^4.17.20",
     "@types/node": "^20.8.5",
     "@typescript-eslint/eslint-plugin": "^6.7.5",
     "@typescript-eslint/parser": "^6.7.5",
@@ -28,5 +29,8 @@
     "nodemon": "^3.0.1",
     "ts-jest": "^29.1.1",
     "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
   }
 }
