--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-openid-connect": "^2.17.0"
   }
 }
