--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tsconfig/strictest": "^2.0.2",
     "@types/express": "^4.17.20",
     "@types/node": "^20.8.5",
+    "@types/supertest": "^2.0.15",
     "@typescript-eslint/eslint-plugin": "^6.7.5",
     "@typescript-eslint/parser": "^6.7.5",
     "concurrently": "^8.2.1",
@@ -27,6 +28,7 @@
     "globals": "^13.23.0",
     "jest": "^29.7.0",
     "nodemon": "^3.0.1",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
     "typescript": "^5.2.2"
   },
