--- a/package.json
+++ b/package.json
@@ -21,5 +21,11 @@
   "bugs": {
     "url": "https://github.com/yeiniel/social-network/issues"
   },
-  "homepage": "https://github.com/yeiniel/social-network#readme"
+  "homepage": "https://github.com/yeiniel/social-network#readme",
+  "devDependencies": {
+    "@tsconfig/node21": "^21.0.1",
+    "@tsconfig/strictest": "^2.0.2",
+    "@types/node": "^20.11.16",
+    "typescript": "^5.3.3"
+  }
 }
