--- a/package.json
+++ b/package.json
@@ -28,12 +28,16 @@
     "@jest/globals": "^29.7.0",
     "@tsconfig/node21": "^21.0.1",
     "@tsconfig/strictest": "^2.0.2",
+    "@types/express": "^4.17.21",
     "@types/node": "^20.11.16",
+    "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^6.20.0",
     "@typescript-eslint/parser": "^6.20.0",
     "eslint": "^8.56.0",
+    "express": "^4.18.2",
     "globals": "^13.24.0",
     "jest": "^29.7.0",
+    "supertest": "^6.3.4",
     "ts-jest": "^29.1.2",
     "typescript": "^5.3.3"
   }
