--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "@jest/globals": "^29.7.0",
     "@tsconfig/node21": "^21.0.1",
     "@tsconfig/strictest": "^2.0.2",
+    "@types/body-parser": "^1.19.5",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.16",
     "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^6.20.0",
     "@typescript-eslint/parser": "^6.20.0",
+    "body-parser": "^1.20.2",
     "eslint": "^8.56.0",
     "globals": "^13.24.0",
     "jest": "^29.7.0",
