--- a/package.json
+++ b/package.json
@@ -2,10 +2,16 @@
     "name": "@yeiniel/social-network",
     "private": true,
     "type": "module",
+    "scripts": {
+        "test": "jest"
+    },
     "devDependencies": {
+        "@jest/globals": "^29.7.0",
         "@tsconfig/node21": "^21.0.1",
         "@tsconfig/strictest": "^2.0.2",
         "@types/node": "^20.11.16",
+        "jest": "^29.7.0",
+        "ts-jest": "^29.1.2",
         "typescript": "^5.3.3"
     }
 }
