--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
     "private": true,
     "type": "module",
     "scripts": {
+        "lint": "eslint .",
         "test": "NODE_OPTIONS=\"$NODE_OPTIONS --experimental-vm-modules\" jest"
     },
     "devDependencies": {
+        "@eslint/js": "^8.56.0",
         "@jest/globals": "^29.7.0",
+        "eslint": "^8.56.0",
         "jest": "^29.7.0"
     }
 }
