--- a/package.json
+++ b/package.json
@@ -3,13 +3,22 @@
     "private": true,
     "type": "module",
     "scripts": {
+        "lint": "eslint .",
         "test": "jest"
     },
     "devDependencies": {
+        "@eslint/eslintrc": "^3.0.0",
+        "@eslint/js": "^8.56.0",
         "@jest/globals": "^29.7.0",
         "@tsconfig/node21": "^21.0.1",
         "@tsconfig/strictest": "^2.0.2",
+        "@types/eslint__eslintrc": "^2.1.1",
+        "@types/eslint__js": "^8.42.3",
         "@types/node": "^20.11.16",
+        "@typescript-eslint/eslint-plugin": "^6.20.0",
+        "@typescript-eslint/parser": "^6.20.0",
+        "eslint": "^8.56.0",
+        "globals": "^13.24.0",
         "jest": "^29.7.0",
         "ts-jest": "^29.1.2",
         "typescript": "^5.3.3"
